Fixed an issue with the footer text being unreadable

--- a/dark/element.css
+++ b/dark/element.css
@@ -733,9 +733,8 @@
   bottom: 0;
   left: 0;
   padding-top: 1rem;
-  background-color: #efefef;
+  background-color: #282828;
   text-align: center;
-  color: #000000;
 }
 
 .element html {
